--- a/src/App.css
+++ b/src/App.css
@@ -350,3 +350,23 @@ button:enabled:active {
   text-align: center;
   margin-bottom: 16px;
 } /*# sourceMappingURL=main.css.map */
+
+ul {
+  list-style: none;
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+li {
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+h3 {
+
+}
+
+span {
+  margin-top: 16px;
+}
