--- a/src/App.css
+++ b/src/App.css
@@ -364,9 +364,15 @@ li {
 }
 
 h3 {
-
+    font-weight: 400;
 }
 
-span {
+.question span {
   margin-top: 16px;
+  font-weight: 400;
+  background-color: #5a6684;
+  padding: 10px 20px;
+  border-radius: 8px;
+  color: #fff;
+
 }
